--- a/.github/workflow/my_pipeline.yml
+++ b/.github/workflow/my_pipeline.yml
@@ -18,7 +18,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  build-my-pipeline:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -36,3 +36,9 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+
+      # Runs a set of commands using the runners shell
+      - name: Run a multi-line script ls -la
+        run: |
+          echo run ls -la
+          ls -la
